tests/mm0_mmu/fail/bad-sort421.mm0
-- bad modifier order
free strict pure sort s421;